[FIX] Right-align numeric values in tracker lists and cleaner placement for sum and average.
git-svn-id: https://svn.code.sf.net/p/tikiwiki/code/trunk@28042 b456876b-0849-0410-b77d-98878d47e9d5

--- a/styles/layout/design.css
+++ b/styles/layout/design.css
@@ -491,6 +491,11 @@ td.form {
 caption {
 	font-weight: bold;
 }
+
+td.numeric {
+	text-align: right;
+	padding-right: 10px;
+}
 /** Tabs **/
 
 .tabactive {
